# ips-mmal

./: .gitignore  CMakeLists.txt  Makefile
src/: mmal.c  mmal.h
test/: test_mmal.c
